docs-archive/apache-airflow-providers-amazon/9.39.0/_sources/_api/tests/system/amazon/aws/example_dms/index.rst.txt
tests.system.amazon.aws.example_dms
===================================

.. py:module:: tests.system.amazon.aws.example_dms

.. autoapi-nested-parse::

   Note:  DMS requires you to configure specific IAM roles/permissions.  For more information, see
   https://docs.aws.amazon.com/dms/latest/userguide/CHAP_Security.html#CHAP_Security.APIRole



Attributes
----------

.. autoapisummary::

   tests.system.amazon.aws.example_dms.DAG_ID
   tests.system.amazon.aws.example_dms.SUBNET_GROUP_KEY
   tests.system.amazon.aws.example_dms.SECURITY_GROUP_KEY
   tests.system.amazon.aws.example_dms.REPLICATION_SUBNET_GROUP_KEY
   tests.system.amazon.aws.example_dms.sys_test_context_task
   tests.system.amazon.aws.example_dms.RDS_ENGINE
   tests.system.amazon.aws.example_dms.RDS_PROTOCOL
   tests.system.amazon.aws.example_dms.RDS_USERNAME
   tests.system.amazon.aws.example_dms.RDS_PASSWORD
   tests.system.amazon.aws.example_dms.TABLE_HEADERS
   tests.system.amazon.aws.example_dms.SAMPLE_DATA
   tests.system.amazon.aws.example_dms.test_context
   tests.system.amazon.aws.example_dms.test_run


Functions
---------

.. autoapisummary::

   tests.system.amazon.aws.example_dms.create_security_group
   tests.system.amazon.aws.example_dms.build_rds_kwargs
   tests.system.amazon.aws.example_dms.create_db_parameter_group
   tests.system.amazon.aws.example_dms.create_sample_table
   tests.system.amazon.aws.example_dms.create_target_database
   tests.system.amazon.aws.example_dms.await_table_load
   tests.system.amazon.aws.example_dms.create_dms_assets
   tests.system.amazon.aws.example_dms.delete_dms_assets
   tests.system.amazon.aws.example_dms.delete_security_group
   tests.system.amazon.aws.example_dms.delete_db_parameter_group


Module Contents
---------------

.. py:data:: DAG_ID
   :value: 'example_dms'


.. py:data:: SUBNET_GROUP_KEY
   :value: 'SUBNET_GROUP'


.. py:data:: SECURITY_GROUP_KEY
   :value: 'SECURITY_GROUP'


.. py:data:: REPLICATION_SUBNET_GROUP_KEY
   :value: 'REPLICATION_SUBNET_GROUP'


.. py:data:: sys_test_context_task

.. py:data:: RDS_ENGINE
   :value: 'postgres'


.. py:data:: RDS_PROTOCOL
   :value: 'postgresql'


.. py:data:: RDS_USERNAME
   :value: 'username'


.. py:data:: RDS_PASSWORD
   :value: 'rds_password'


.. py:data:: TABLE_HEADERS
   :value: ['apache_project', 'release_year']


.. py:data:: SAMPLE_DATA
   :value: [('Airflow', '2015'), ('OpenOffice', '2012'), ('Subversion', '2000'), ('NiFi', '2006')]


.. py:function:: create_security_group(security_group_name, vpc_id, existing_security_group = None)

.. py:function:: build_rds_kwargs(db_name, engine_version, parameter_group_name, security_group_id, subnet_group = None)

   Assemble the kwargs for RdsCreateDbInstanceOperator at runtime.

   When a DB subnet group is provided via the test context, the instance is placed in it (e.g. private subnets
   reachable by the test runner), otherwise it lands in the default VPC.


.. py:function:: create_db_parameter_group(parameter_group_name)

.. py:function:: create_sample_table(instance_name, db_name, table_name)

.. py:function:: create_target_database(instance_name, source_db_name, target_db_name)

.. py:function:: await_table_load(replication_task_arn, schema_name, table_name)

.. py:function:: create_dms_assets(source_db_name, target_db_name, instance_name, replication_instance_name, source_endpoint_identifier, target_endpoint_identifier, replication_subnet_group = None)

.. py:function:: delete_dms_assets(replication_instance_arn, source_endpoint_arn, target_endpoint_arn, source_endpoint_identifier, target_endpoint_identifier, replication_instance_name)

.. py:function:: delete_security_group(security_group_id, security_group_name, existing_security_group = None)

.. py:function:: delete_db_parameter_group(parameter_group_name)

.. py:data:: test_context
   :value: None


.. py:data:: test_run

